2018-05-11  Claudio Saavedra  <csaavedra@igalia.com>

        [GTK][a11y] Newly added accessibility/scroll-to-make-visible-iframe-offscreen.html fails

        Unreviewed gardening. Added the failure.
        * platform/gtk/TestExpectations:

2018-05-11  Claudio Saavedra  <csaavedra@igalia.com>

        [GTK] media/video-playbackrate.html intermittently crashing
        https://bugs.webkit.org/show_bug.cgi?id=185546

        Mark thet test, unreviewed gardening.
        * platform/gtk/TestExpectations:

2018-05-11  Youenn Fablet  <youenn@apple.com>

        Rebase some fetch API tests
        https://bugs.webkit.org/show_bug.cgi?id=185544

        Unreviewed.

        * http/tests/fetch/fetching-same-resource-with-different-options-expected.txt:
        * platform/mac/imported/w3c/web-platform-tests/fetch/api/basic/request-headers.any-expected.txt:
        * platform/mac/imported/w3c/web-platform-tests/fetch/api/basic/request-headers.any.worker-expected.txt:

2018-05-11  Youenn Fablet  <youenn@apple.com>

        Skip http/tests/appcache/load-from-appcache-defer-resume-crash.html for iOS sim WK2
        https://bugs.webkit.org/show_bug.cgi?id=185430
        <rdar://problem/40065118>

        Unreviewed.

        * platform/ios-wk2/TestExpectations: Precising the WK1 testRunner API used by the test.

2018-05-10  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r227983): fast/dom/adopt-node-crash-2.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=182589

        Reviewed by Wenson Hsieh.

        This is a speculative fix for the test since I can't reproduce the flakiness locally. Because r227983 makes
        the layout update async, I suspect the focus change which occurs to the keygen having autofocus attribute
        isn't updating the layout in time for notifyDone call. Manually update the layout before/after the test.

        Also wait for the load event to figure before starting the test since layout, etc... may not be updated